--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,9 +2,26 @@
 
 <h2>My Posts</h2>
 <% for post in @place.posts %>
-  <h3><%= post.title %></h3>
-  <h4><%= post.posted_on %></h4>
-  <p><%= post.description %></p>
+  <div class="col-md-3 col-sm-6">
+    <h4>
+      <% if post.user %>
+        <%= post.user.first_name %>
+      <% else %>
+        anonymous
+      <% end %>
+    </h4>
+
+    <% if post.uploaded_image.attached? %>
+      <img src="<%= url_for(post.uploaded_image) %>" class="img-fluid">
+    <% else %>
+      <img src="<%= post.image %>" class="img-fluid">
+    <% end %>
+
+    <h3><%= post.title %></h3>
+    <h4><%= post.posted_on %></h4>
+    <p><%= post.description %></p>
+  </div>
+
 <% end %>
 
 <p>
