--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -27,6 +27,7 @@
     </div>
 
     <%= form.hidden_field "place_id" %>
+    <%= form.hidden_field "user_id" %>
   <% end %>
 <% else %>
   You must first <a href="/sessions/new">login</a> to post.
