--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <ul class="navbar-nav mb-2 mb-lg-0">
           <% if @current_user %>
             <li class="nav-item">Logged in as: <%= @current_user.username %></li>
-            <li class="nav-item"><%= link_to "Logout", "/sessions/logout", method: :delete, class: "nav-link" %></li>
+            <li class="nav-item"><%= button_to "Logout", "/sessions/logout", method: :delete, class: "nav-link" %></li>
           <% else %>
             <li class="nav-item"><a href="/sessions/new" class="nav-link">Login</a></li>
             <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
