updates to places

--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -8,6 +8,8 @@
 
   <div class="mb-3">
     <%= form.submit "Create Place", class: "btn btn-primary" %>
-
   </div>
+
+  <%= form.hidden_field "user_id" %>
+
 <% end %>
