--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,9 @@
-<h1><%= @place.name %></h1>
+<h1>My <%= @place.name %> Posts</h1>
 
-<h2>My Posts</h2>
+<p>
+  <a href="/posts/new">New Post</a>
+</p>
+
 <% for post in @place.posts %>
   <div class="col-md-3 col-sm-6">
 
