New post button update

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,7 @@
 <h1>My <%= @place.name %> Posts</h1>
 
 <p>
-  <a href="/posts/new">New Post</a>
+  <a href="/posts/new" class="btn btn-primary">New Post</a>
 </p>
 
 <% for post in @place.posts %>
